Fix for flex-flow on shell-panel > content div. Added similar styles to panel > .content-container for consistent styles. Also a tweak to tighten up block spacing.

--- a/src/components/calcite-panel/calcite-panel.scss
+++ b/src/components/calcite-panel/calcite-panel.scss
@@ -80,6 +80,9 @@ slot[name="header-content"]::slotted(.heading) {
 }
 
 .content-container {
+  align-items: stretch;
+  display: flex;
+  flex-flow: column;
   flex: 1 1 auto;
   background-color: var(--calcite-app-background-content);
   overflow: auto;
