--- a/src/components/calcite-shell-panel/calcite-shell-panel.scss
+++ b/src/components/calcite-shell-panel/calcite-shell-panel.scss
@@ -17,6 +17,7 @@
   align-items: stretch;
   align-self: stretch;
   background-color: var(--calcite-app-background-content);
+  flex-flow: column;
   display: flex;
   width: var(--calcite-app-shell-panel-width);
   min-width: var(--calcite-app-shell-panel-min-width);
